refactored to split everything so that it can be re-used in add a new free game piece

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,13 @@
       "mode": "auto",
       "program": "${fileDirname}",
       "env": {},
-      "args": []
+      "args": [
+        "--inputFile",
+        "epic_free_games.json",
+        "--outputFile",
+        "out.json"
+      ],
+      "showLog": true
     }
   ]
 }
