--- a/.github/workflows/epic_free_games_list_add_new_game.yml
+++ b/.github/workflows/epic_free_games_list_add_new_game.yml
@@ -12,7 +12,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  free_game_notifier:
+  epic_free_games_list_add_new_game:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -36,6 +36,7 @@ jobs:
           mv out.json epic_free_games.json
           git add epic_free_games.json
           git commit -m "Github actions adding this week's game"
+      # https://openedx.atlassian.net/wiki/spaces/AC/pages/3378348233/Writing+a+GitHub+Action+that+pushes+commits
       - name: Push
         run: |
           git remote set-url origin https://x-access-token:${{ github.token }}@github.com/${{ github.repository }}
