fixed a bunch that had bad sandboxIds that led to no ratings

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,7 @@
       "program": "${fileDirname}",
       "env": {},
       "args": [
+        "fix_ratings",
         "--inputFile",
         "epic_free_games.json",
         "--outputFile",
